--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <div class="js-clock">
       <h1 class="js-clock-title">00:00:00</h1>
     </div>
+    <form class="js-form form">
+      <input
+        class="js-form-input"
+        type="text"
+        placeholder="What's your name?"
+      />
+    </form>
+    <h4 class="js-greeting greeting"></h4>
     <script src="clock.js"></script>
+    <script src="greeting.js"></script>
   </body>
 </html>
