--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div class="js-clock">
-      <h1 class="js-clock-title">00:00:00</h1>
+    <div class="js-clock clock">
+      <h1 class="js-clock-title clock-title">00:00:00</h1>
     </div>
     <form class="js-form form">
       <input
