to do list compelete and make folder

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="kr">
   <head>
     <title>clock</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="css/index.css" />
+    <meta charset="UTF-8" />
   </head>
   <body>
     <div class="js-clock clock">
@@ -20,9 +21,9 @@
       <input type="text" placeholder="Write a to do" />
     </form>
     <ul class="js-toDoList"></ul>
-    <script src="clock.js"></script>
-    <script src="greeting.js"></script>
-    <script src="todo.js"></script>
+    <script src="js/clock.js"></script>
+    <script src="js/greeting.js"></script>
+    <script src="js/todo.js"></script>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
