backgroud image compelete

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="js/clock.js"></script>
     <script src="js/greeting.js"></script>
     <script src="js/todo.js"></script>
+    <script src="js/bg.js"></script>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
