--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div class="js-clock clock">
       <h1 class="js-clock-title clock-title">00:00:00</h1>
     </div>
+    <span class="js-weather"></span>
     <form class="js-form form">
       <input
         class="js-form-input"
@@ -25,9 +26,6 @@
     <script src="js/greeting.js"></script>
     <script src="js/todo.js"></script>
     <script src="js/bg.js"></script>
-    <script
-      src="https://kit.fontawesome.com/6478f529f2.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="js/weather.js"></script>
   </body>
 </html>
