--- a/index.html
+++ b/index.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html lang="kr">
-  <head>
-    <title>clock</title>
-    <link rel="stylesheet" href="css/index.css" />
-    <meta charset="UTF-8" />
-  </head>
-  <body>
-    <div class="js-clock clock">
-      <h1 class="js-clock-title clock-title">00:00:00</h1>
-    </div>
-    <span class="js-weather"></span>
-    <form class="js-form form">
-      <input
-        class="js-form-input"
-        type="text"
-        placeholder="What's your name?"
-      />
-    </form>
-    <h4 class="js-greeting greeting"></h4>
-    <form class="js-toDoForm">
-      <input type="text" placeholder="Write a to do" />
-    </form>
-    <ul class="js-toDoList"></ul>
-    <script src="js/clock.js"></script>
-    <script src="js/greeting.js"></script>
-    <script src="js/todo.js"></script>
-    <script src="js/bg.js"></script>
-    <script src="js/weather.js"></script>
-  </body>
+    <head>
+        <title>clock</title>
+        <link rel="stylesheet" href="css/index.css" />
+        <meta charset="UTF-8" />
+    </head>
+    <body>
+        <span class="js-weather weather"></span>
+        <div class="center-column">
+            <div class="js-clock clock">
+                <h1 class="js-clock-title clock-title">00:00:00</h1>
+            </div>
+            <form class="js-form form">
+                <input
+                    class="js-form-input"
+                    type="text"
+                    placeholder="What's your name?"
+                />
+            </form>
+            <h4 class="js-greeting greeting"></h4>
+            <form class="js-toDoForm toDoForm">
+                <input type="text" placeholder="Write a to do" />
+            </form>
+            <ul class="js-toDoList toDoList"></ul>
+        </div>
+        <script src="js/clock.js"></script>
+        <script src="js/greeting.js"></script>
+        <script src="js/todo.js"></script>
+        <script src="js/bg.js"></script>
+        <script src="js/weather.js"></script>
+    </body>
 </html>
